--- a/modules/pageNotFound/PageNotFound.scss
+++ b/modules/pageNotFound/PageNotFound.scss
@@ -17,18 +17,20 @@
     }
     h1 {
       font-size: 150px;
+      color: #ffff !important;
     }
     h2 {
       font-size: 80px;
+      color: #ffff !important;
     }
     a {
       border: none;
       outline: none;
       font-size: 16px;
       display: inline-block;
-      background-color: #000;
+      background-color: #ffff;
       padding: 12px 67px;
-      color: #ffff;
+      color: #000;
       cursor: pointer;
       margin-top: 10px;
       margin-top: 30px;
